Closed
Bug 48592
Opened 25 years ago
Closed 25 years ago
Wrong Cookie is deleted
Categories
(Core :: Networking: Cookies, defect, P3)
Tracking
()
VERIFIED
FIXED
M18
People
(Reporter: jesup, Assigned: morse)
References
Details
(Whiteboard: [nsbeta3+])
If I try to delete a cookie, it's removed from the list, but if I hit Ok and
then re-open the cookie list, it's still there. Also, if I leave prefs, and
then re-enter and examine the cookie list, or quit Mozilla and go back in and
check, the cookie is still there.
Assignee | ||
Comment 2•25 years ago
|
||
tever, are you able to reproduce this?
Assignee | ||
Comment 3•25 years ago
|
||
Something is screwed up here. I did the following:
1. Go to home.netscape.com
2. Enter cookie viewer and observe the following cookies:
ads.web.aol.com: badsc
home.netscape.com: c
netscape.com UIDC
3. Select and remove the home.netscape.com cookie
4. Press OK
5. Reenter cookie viewer. It displays the following cookies:
ads.web.aol.com: badsc
home.netscape.com: c
Note that the third cookie got deleted whereas I requested the second cookie to
be deleted.
Since the reporter didn't give detailed instructions for duplicating the
problem, I will go with the above instructions and assume that it is the same
bug.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Keywords: nsbeta3
Whiteboard: [nsbeta3+]
Target Milestone: --- → M18
Reporter | ||
Comment 4•25 years ago
|
||
Aha! I only noticed that the cookie I tried to delete wasn't deleted; I didn't
notice that another one was. Thanks for noticing that.
Reporter | ||
Comment 5•25 years ago
|
||
Changed summary to be more correct
Summary: Deleted cookies aren't deleted → Wrong Cookie is deleted
Assignee | ||
Comment 6•25 years ago
|
||
OK, this is a regression caused by an incorrect change that was made in version
1.78 of nsCookie.cpp. That occured on August 2. I just checked in a fix.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 7•25 years ago
|
||
This appears to be working fine on r.h. Linux 2000082508
Randall, could you please verify this is now working on FreeBSD. I do not have
access to that os at the moment.
Comment 8•25 years ago
|
||
I have not heard from randall for 2 weeks so I am assuming this is working on
freeBSD. Please re-open if you see this problem again.
Status: RESOLVED → VERIFIED
Reporter | ||
Comment 9•25 years ago
|
||
Sorry - I went to verify it and did so, but got distracted by another bug I found.
Verified FreeBSD 4.1 20000910xx
You need to log in
before you can comment on or make changes to this bug.
Description
•