bug 48592, cookie viewer deleting wrong cookie, caused by incorrect change in version 1.78